--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_left"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        />
 
 </android.support.v4.widget.DrawerLayout>
