20161114|起草学习使用

--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -1,33 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cl_main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="256dp"
         >
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/ctl_scale_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:title="@string/app_name"
+
+            app:contentScrim="@color/colorPrimary"
+            app:statusBarScrim="@android:color/transparent"
             >
             <ImageView
-                android:id="@+id/iv_avtor"
+                android:id="@+id/iv_avator"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@mipmap/bluelm"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.7"
                 />
             <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar_main"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_collapseMode="pin"/>
+                android:layout_height="64dp"
+                app:layout_collapseMode="pin"
+                app:popupTheme=""
+                android:fitsSystemWindows="true"/>
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tl_fragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </android.support.design.widget.CoordinatorLayout>
