--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/dl_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    >
     <FrameLayout
         android:id="@+id/fl_content"
         android:layout_width="match_parent"
@@ -11,6 +15,9 @@
         android:id="@+id/nav_left"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/view_header_hl"
+        app:menu="@menu/menu_navigation"
         />
 
 </android.support.v4.widget.DrawerLayout>
